--- a/admin-dashboard.html
+++ b/admin-dashboard.html
@@ -18,12 +18,11 @@
             <div class="collapse navbar-collapse w-100" id="mainNav">
                 <ul class="navbar-nav mx-auto">
                     <li class="nav-item"><a class="nav-link" href="index.html">Inicio</a></li>
+                    <li class="nav-item"><a class="nav-link" href="https://valparaiso-roleplay-mta.gitbook.io/westcoast-rp-fivem/normativas/donaciones">Normativas</a></li>
+                    <li class="nav-item"><a class="nav-link" href="https://discord.gg/T99hAzmP5A" target="_blank">Discord</a></li>
                     <li class="nav-item" id="admin-link" style="display: none;">
                         <a class="nav-link active text-danger fw-bold" href="admin-dashboard.html">Admin</a>
                     </li>
-                    <li class="nav-item"><a class="nav-link" href="catalogo.html">Tienda VIP</a></li>
-                    <li class="nav-item"><a class="nav-link" href="normativas.html">Normativas</a></li>
-                    <li class="nav-item"><a class="nav-link" href="https://discord.com/tu-servidor" target="_blank">Discord</a></li>
                 </ul>
                 <div class="d-flex align-items-center">
                     <div id="guest-container"><a href="login.html" class="btn btn-outline-warning btn-sm">Iniciar Sesión</a></div>
