--- a/index.html
+++ b/index.html
@@ -30,10 +30,9 @@
             <div class="collapse navbar-collapse w-100" id="mainNav">
                 <ul class="navbar-nav mx-auto">
                     <li class="nav-item"><a class="nav-link active" href="index.html">Inicio</a></li>
-                    <li class="nav-item" id="admin-link" style="display: none;"><a class="nav-link text-danger fw-bold" href="admin-dashboard.html">Admin</a></li>
-                    <li class="nav-item"><a class="nav-link" href="catalogo.html">Tienda VIP</a></li>
-                    <li class="nav-item"><a class="nav-link" href="normativas.html">Normativas</a></li>
+                    <li class="nav-item"><a class="nav-link" href="https://valparaiso-roleplay-mta.gitbook.io/westcoast-rp-fivem/normativas/donaciones">Normativas</a></li>
                     <li class="nav-item"><a class="nav-link" href="https://discord.gg/T99hAzmP5A" target="_blank">Discord</a></li>
+                    <li class="nav-item" id="admin-link" style="display: none;"><a class="nav-link text-danger fw-bold" href="admin-dashboard.html">Admin</a></li>
                 </ul>
                 <div class="d-flex align-items-center">
                     <div id="guest-container"><a href="login.html" class="btn btn-outline-warning btn-sm">Iniciar Sesión</a></div>
@@ -58,7 +57,7 @@
 
     <div class="container my-4">
         <div class="server-status-panel">
-            <strong>ESTADO DEL SERVIDOR:</strong> <span id="server-status-text" class="status-loading">Cargando...</span> | 
+            <strong>SERVIDOR:</strong> <span id="server-status-text" class="status-loading">Cargando...</span> | 
             <strong>JUGADORES:</strong> <span id="server-players-text">--/--</span>
         </div>
     </div>
@@ -67,7 +66,7 @@
         <h2 class="text-center fw-bold mb-4 text-uppercase">Paquetes VIP Disponibles</h2>
         <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
             <div class="col">
-                <div class="card h-100 bg-dark-secondary border-secondary">
+                <div class="card h-100 bg-dark-secondary border-warning">
                     <img src="assets/img/flny-vip-bronce.png" class="card-img-top" alt="VIP Bronce" />
                     <div class="card-body d-flex flex-column text-white">
                         <h5 class="card-title fw-bold">🗽 VIP Bronce</h5>
@@ -83,18 +82,18 @@
                 </div>
             </div>
             <div class="col">
-                <div class="card h-100 bg-dark-secondary border-primary">
+                <div class="card h-100 bg-dark-secondary border-warning">
                     <img src="assets/img/flny-vip-plata.png" class="card-img-top" alt="VIP Plata" />
                     <div class="card-body d-flex flex-column text-white">
                         <h5 class="card-title fw-bold">🗽 VIP Plata</h5>
-                        <p class="card-text fs-4 fw-bold text-primary">$10.000 CLP / mes</p>
+                        <p class="card-text fs-4 fw-bold text-warning">$10.000 CLP / mes</p>
                         <ul class="list-unstyled mt-3 mb-4">
                             <li>✅ Todos los beneficios de Bronce.</li>
                             <li>✅ Acceso a vehículos exclusivos (Nivel 2).</li>
                             <li>✅ Customización de personaje avanzada.</li>
                             <li>✅ Acceso a canal de Discord para VIPs.</li>
                         </ul>
-                        <button class="btn btn-outline-primary fw-bold mt-auto" onclick="showVipDetails('vip_silver', 'VIP Plata', 10000, 'assets/img/flny-vip-plata.png', 'Incluye todos los beneficios de Bronce, además de acceso a vehículos de nivel 2, más opciones de personalización para tu personaje y entrada al canal exclusivo de Discord para la comunidad VIP.')">Ver Detalles</button>
+                        <button class="btn btn-outline-warning fw-bold mt-auto" onclick="showVipDetails('vip_silver', 'VIP Plata', 10000, 'assets/img/flny-vip-plata.png', 'Incluye todos los beneficios de Bronce, además de acceso a vehículos de nivel 2, más opciones de personalización para tu personaje y entrada al canal exclusivo de Discord para la comunidad VIP.')">Ver Detalles</button>
                     </div>
                 </div>
             </div>
@@ -116,49 +115,65 @@
             </div>
             <div class="col">
                 <div class="card h-100 bg-dark-secondary border-warning">
-                    <img src="assets/img/flny-vip-oro.png" class="card-img-top" alt="VIP Oro" />
+                    <img src="assets/img/flny-vip-diamante.png" class="card-img-top" alt="VIP Diamante" />
                     <div class="card-body d-flex flex-column text-white">
-                        <h5 class="card-title fw-bold">🗽 VIP Oro</h5>
-                        <p class="card-text fs-4 fw-bold text-warning">$15.000 CLP / mes</p>
+                        <h5 class="card-title fw-bold">🗽 VIP Diamante</h5>
+                        <p class="card-text fs-4 fw-bold text-warning">$20.000 CLP / mes</p>
                         <ul class="list-unstyled mt-3 mb-4">
-                            <li>✅ Todos los beneficios de Plata.</li>
+                            <li>✅ Todos los beneficios de Diamate.</li>
                             <li>✅ Acceso a todas las skins de armas.</li>
                             <li>✅ Posibilidad de crear tu propia banda.</li>
                             <li>✅ Soporte prioritario en Discord.</li>
                         </ul>
-                        <button class="btn btn-outline-warning fw-bold mt-auto" onclick="showVipDetails('vip_gold', 'VIP Oro', 15000, 'assets/img/flny-vip-oro.png', 'El paquete definitivo. Obtén todos los beneficios de Plata, además de acceso a todas las skins de armas, la habilidad para fundar tu propia banda dentro del servidor y recibirás soporte prioritario en Discord.')">Ver Detalles</button>
+                        <button class="btn btn-outline-warning fw-bold mt-auto" onclick="showVipDetails('vip_diamond', 'VIP Diamante', 20000, 'assets/img/flny-vip-diamante.png', 'El paquete definitivo. Obtén todos los beneficios de Diamate, además de acceso a todas las skins de armas, la habilidad para fundar tu propia banda dentro del servidor y recibirás soporte prioritario en Discord.')">Ver Detalles</button>
                     </div>
                 </div>
             </div>
             <div class="col">
                 <div class="card h-100 bg-dark-secondary border-warning">
-                    <img src="assets/img/flny-vip-oro.png" class="card-img-top" alt="VIP Oro" />
+                    <img src="assets/img/flny-vip-esmeralda.png" class="card-img-top" alt="VIP Esmeralda" />
                     <div class="card-body d-flex flex-column text-white">
-                        <h5 class="card-title fw-bold">🗽 VIP Oro</h5>
-                        <p class="card-text fs-4 fw-bold text-warning">$15.000 CLP / mes</p>
+                        <h5 class="card-title fw-bold">🗽 VIP Esmeralda</h5>
+                        <p class="card-text fs-4 fw-bold text-warning">$25.000 CLP / mes</p>
                         <ul class="list-unstyled mt-3 mb-4">
-                            <li>✅ Todos los beneficios de Plata.</li>
+                            <li>✅ Todos los beneficios de Esmeralda.</li>
                             <li>✅ Acceso a todas las skins de armas.</li>
                             <li>✅ Posibilidad de crear tu propia banda.</li>
                             <li>✅ Soporte prioritario en Discord.</li>
                         </ul>
-                        <button class="btn btn-outline-warning fw-bold mt-auto" onclick="showVipDetails('vip_gold', 'VIP Oro', 15000, 'assets/img/flny-vip-oro.png', 'El paquete definitivo. Obtén todos los beneficios de Plata, además de acceso a todas las skins de armas, la habilidad para fundar tu propia banda dentro del servidor y recibirás soporte prioritario en Discord.')">Ver Detalles</button>
+                        <button class="btn btn-outline-warning fw-bold mt-auto" onclick="showVipDetails('vip_esmerald', 'VIP Esmeralda', 25000, 'assets/img/flny-vip-esmeralda.png', 'El paquete definitivo. Obtén todos los beneficios de Esmeralda, además de acceso a todas las skins de armas, la habilidad para fundar tu propia banda dentro del servidor y recibirás soporte prioritario en Discord.')">Ver Detalles</button>
                     </div>
                 </div>
             </div>
             <div class="col">
                 <div class="card h-100 bg-dark-secondary border-warning">
-                    <img src="assets/img/flny-vip-oro.png" class="card-img-top" alt="VIP Oro" />
+                    <img src="assets/img/flny-vip-platino.png" class="card-img-top" alt="VIP Platino" />
                     <div class="card-body d-flex flex-column text-white">
-                        <h5 class="card-title fw-bold">🗽 VIP Oro</h5>
-                        <p class="card-text fs-4 fw-bold text-warning">$15.000 CLP / mes</p>
+                        <h5 class="card-title fw-bold">🗽 VIP Platino</h5>
+                        <p class="card-text fs-4 fw-bold text-warning">$30.000 CLP / mes</p>
                         <ul class="list-unstyled mt-3 mb-4">
-                            <li>✅ Todos los beneficios de Plata.</li>
+                            <li>✅ Todos los beneficios de Platino.</li>
                             <li>✅ Acceso a todas las skins de armas.</li>
                             <li>✅ Posibilidad de crear tu propia banda.</li>
                             <li>✅ Soporte prioritario en Discord.</li>
                         </ul>
-                        <button class="btn btn-outline-warning fw-bold mt-auto" onclick="showVipDetails('vip_gold', 'VIP Oro', 15000, 'assets/img/flny-vip-oro.png', 'El paquete definitivo. Obtén todos los beneficios de Plata, además de acceso a todas las skins de armas, la habilidad para fundar tu propia banda dentro del servidor y recibirás soporte prioritario en Discord.')">Ver Detalles</button>
+                        <button class="btn btn-outline-warning fw-bold mt-auto" onclick="showVipDetails('vip_platinum', 'VIP Platino', 30000, 'assets/img/flny-vip-platino.png', 'El paquete definitivo. Obtén todos los beneficios de Platino, además de acceso a todas las skins de armas, la habilidad para fundar tu propia banda dentro del servidor y recibirás soporte prioritario en Discord.')">Ver Detalles</button>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card h-100 bg-dark-secondary border-warning">
+                    <img src="assets/img/flny-vip-flny.png" class="card-img-top" alt="VIP FLNY" />
+                    <div class="card-body d-flex flex-column text-white">
+                        <h5 class="card-title fw-bold">🗽 VIP FLNY</h5>
+                        <p class="card-text fs-4 fw-bold text-warning">$35.000 CLP / mes</p>
+                        <ul class="list-unstyled mt-3 mb-4">
+                            <li>✅ Todos los beneficios de FLNY.</li>
+                            <li>✅ Acceso a todas las skins de armas.</li>
+                            <li>✅ Posibilidad de crear tu propia banda.</li>
+                            <li>✅ Soporte prioritario en Discord.</li>
+                        </ul>
+                        <button class="btn btn-outline-warning fw-bold mt-auto" onclick="showVipDetails('vip_flny', 'VIP FLNY', 30000, 'assets/img/flny-vip-flny.png', 'El paquete definitivo. Obtén todos los beneficios de FLNY, además de acceso a todas las skins de armas, la habilidad para fundar tu propia banda dentro del servidor y recibirás soporte prioritario en Discord.')">Ver Detalles</button>
                     </div>
                 </div>
             </div>
@@ -185,7 +200,9 @@
                     </div>
                 </div>
                 <div class="modal-footer border-secondary">
-                    <div id="recipient-input-group" class="me-auto d-none"><input type="text" id="recipient-username" class="form-control bg-dark text-white border-secondary" placeholder="Nombre de usuario del amigo"></div>
+                    <div id="recipient-input-group" class="me-auto d-none">
+                        <input type="text" id="recipient-username" class="form-control bg-dark text-white border-secondary" placeholder="Ej: Panchuuu">
+                    </div>
                     <button type="button" class="btn btn-secondary" onclick="resetModalButtons()">Cerrar</button>
                     <button type="button" class="btn btn-outline-light" id="gift-button" onclick="toggleGiftMode(true)">Regalar</button>
                     <button type="button" class="btn btn-warning fw-bold" id="vipModalAddToCartButton">Añadir a mi Carro</button>
@@ -193,14 +210,53 @@
             </div>
         </div>
     </div>
+
+    <div id="carouselExampleDark" class="carousel carousel-dark slide">
+        <div class="carousel-indicators">
+            <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+            <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2"></button>
+            <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2" aria-label="Slide 3"></button>
+        </div>
+        <div class="carousel-inner">
+            <div class="carousel-item active" data-bs-interval="1000">
+            <img src="assets/img/test.jpg" class="d-block w-100" alt="...">
+            <div class="carousel-caption d-none d-md-block">
+                <h5>Toyota A-86</h5>
+                <p>La nave de la ciudad</p>
+            </div>
+            </div>
+            <div class="carousel-item" data-bs-interval="2000">
+            <img src="assets/img/test2.webp" class="d-block w-100" alt="...">
+            <div class="carousel-caption d-none d-md-block">
+                <h5>Nissan Skyline R34</h5>
+                <p>Algo exótico.</p>
+            </div>
+            </div>
+            <div class="carousel-item">
+            <img src="assets/img/test3.webp" class="d-block w-100" alt="...">
+            <div class="carousel-caption d-none d-md-block">
+                <h5>Toyota GT-86</h5>
+                <p>Algo exclusivo...</p>
+            </div>
+            </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+        </button>
+    </div>
     
     <div class="container">
         <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top border-secondary">
-            <p class="col-md-4 mb-0 text-muted-dark">© 2024 Flaites NY Roleplay</p>
+            <p class="col-md-4 mb-0 text-muted-dark">© 2025 Flaites NY Roleplay</p>
             <a href="index.html" class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto text-decoration-none"><img src="assets/img/logo_tienda.png" alt="Logo Flaites NY" width="50" /></a>
             <ul class="nav col-md-4 justify-content-end">
-                <li class="nav-item"><a href="terminos.html" class="nav-link px-2 footer-link-simple">Términos</a></li>
-                <li class="nav-item"><a href="https://discord.com/tu-servidor" target="_blank" class="nav-link px-2 footer-link-simple" title="Discord"><i class="fab fa-discord fa-lg"></i></a></li>
+                <li class="nav-item"><a href="https://valparaiso-roleplay-mta.gitbook.io/westcoast-rp-fivem/normativas/donaciones" class="nav-link px-2 footer-link-simple">Términos</a></li>
+                <li class="nav-item"><a href="https://discord.com/invite/T99hAzmP5A" target="_blank" class="nav-link px-2 footer-link-simple" title="Discord"><i class="fab fa-discord fa-lg"></i></a></li>
                 <li class="nav-item"><a href="https://www.instagram.com/" target="_blank" class="nav-link px-2 footer-link-simple" title="Instagram"><i class="fab fa-instagram fa-lg"></i></a></li>
                 <li class="nav-item"><a href="https://www.tiktok.com/es/" target="_blank" class="nav-link px-2 footer-link-simple" title="TikTok"><i class="fab fa-tiktok fa-lg"></i></a></li>
             </ul>
