--- a/perfil.html
+++ b/perfil.html
@@ -21,10 +21,9 @@
             <div class="collapse navbar-collapse w-100" id="mainNav">
                 <ul class="navbar-nav mx-auto">
                     <li class="nav-item"><a class="nav-link" href="index.html">Inicio</a></li>
+                    <li class="nav-item"><a class="nav-link" href="https://valparaiso-roleplay-mta.gitbook.io/westcoast-rp-fivem/normativas/donaciones">Normativas</a></li>
+                    <li class="nav-item"><a class="nav-link" href="https://discord.gg/T99hAzmP5A" target="_blank">Discord</a></li>
                     <li class="nav-item" id="admin-link" style="display: none;"><a class="nav-link text-danger fw-bold" href="admin-dashboard.html">Admin</a></li>
-                    <li class="nav-item"><a class="nav-link" href="catalogo.html">Tienda VIP</a></li>
-                    <li class="nav-item"><a class="nav-link" href="normativas.html">Normativas</a></li>
-                    <li class="nav-item"><a class="nav-link" href="https://discord.com/tu-servidor" target="_blank">Discord</a></li>
                 </ul>
                 <div class="d-flex align-items-center">
                     <div id="guest-container"><a href="login.html" class="btn btn-outline-warning btn-sm">Iniciar Sesión</a></div>
@@ -61,9 +60,9 @@
                         <h3 id="profile-username" class="text-uppercase fw-bold"></h3>
                         <hr class="border-secondary">
                         <div class="text-start">
-                            <p class="text-muted mb-1"><i class="fab fa-discord me-2"></i>Discord ID</p>
+                            <p class="text-muted mb-1 text-white"><i class="fab fa-discord me-2"></i>Discord ID</p>
                             <p id="profile-discord-id" class="fw-light"></p>
-                            <p class="text-muted mb-1"><i class="fas fa-gamepad me-2"></i>FiveM License</p>
+                            <p class="text-muted mb-1 text-white"><i class="fas fa-gamepad me-2"></i>FiveM License</p>
                             <p id="profile-fivem-license" class="fw-light text-break"></p>
                         </div>
                     </div>
@@ -97,8 +96,8 @@
                 <img src="assets/img/logo_tienda.png" alt="Logo Flaites NY" width="50" />
             </a>
             <ul class="nav col-md-4 justify-content-end">
-                <li class="nav-item"><a href="terminos.html" class="nav-link px-2 footer-link-simple">Términos</a></li>
-                <li class="nav-item"><a href="https://discord.com/tu-servidor" target="_blank" class="nav-link px-2 footer-link-simple" title="Discord"><i class="fab fa-discord fa-lg"></i></a></li>
+                <li class="nav-item"><a href="https://valparaiso-roleplay-mta.gitbook.io/westcoast-rp-fivem/normativas/donaciones" class="nav-link px-2 footer-link-simple">Términos</a></li>
+                <li class="nav-item"><a href="https://discord.gg/T99hAzmP5A" target="_blank" class="nav-link px-2 footer-link-simple" title="Discord"><i class="fab fa-discord fa-lg"></i></a></li>
                 <li class="nav-item"><a href="https://www.instagram.com/" target="_blank" class="nav-link px-2 footer-link-simple" title="Instagram"><i class="fab fa-instagram fa-lg"></i></a></li>
                 <li class="nav-item"><a href="https://www.tiktok.com/es/" target="_blank" class="nav-link px-2 footer-link-simple" title="TikTok"><i class="fab fa-tiktok fa-lg"></i></a></li>
             </ul>
