--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@400;700;900&family=Inter:wght@400;700&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" />
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 <body class="bg-dark text-white">
 
@@ -18,7 +19,7 @@
 
     <header class="hero-section text-center py-5">
         <div class="container">
-            <img class="logoT" src="assets/img/logo_tienda.png" alt="Logo Flaites NY" style="max-height: 180px" />
+            <img class="logoT" src="assets/img/logo_tienda.png" alt="Logo Flaites NY" style="max-height: 180px" loading="lazy" />
             <h1 class="display-4 fw-bold text-uppercase mt-3">Flaites NY Roleplay</h1>
             <p class="lead">La tienda oficial de paquetes VIP y donaciones del servidor.</p>
         </div>
@@ -47,7 +48,7 @@
                         </ul>
                     </div>
                     <a href="carro.html" class="position-relative ms-3" title="Ver carro">
-                        <img src="assets/img/carrito-de-compras.png" alt="carro" style="height:24px;">
+                        <img src="assets/img/carrito-de-compras.png" alt="carro" style="height:24px;" loading="lazy">
                         <span id="cart-counter" class="cart-counter-badge">0</span>
                     </a>
                 </div>
@@ -56,7 +57,7 @@
     </nav>
 
     <div class="container my-4">
-        <div class="server-status-panel">
+        <div class="server-status-panel" data-aos="fade-down">
             <strong>SERVIDOR:</strong> <span id="server-status-text" class="status-loading">Cargando...</span> | 
             <strong>JUGADORES:</strong> <span id="server-players-text">--/--</span>
         </div>
@@ -66,8 +67,8 @@
         <h2 class="text-center fw-bold mb-4 text-uppercase">Paquetes VIP Disponibles</h2>
         <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
             <div class="col">
-                <div class="card h-100 bg-dark-secondary border-warning">
-                    <img src="assets/img/flny-vip-bronce.png" class="card-img-top" alt="VIP Bronce" />
+                <div class="card h-100 bg-dark-secondary border-warning" data-aos="zoom-in">
+                    <img src="assets/img/flny-vip-bronce.png" class="card-img-top" alt="VIP Bronce" loading="lazy" />
                     <div class="card-body d-flex flex-column text-white">
                         <h5 class="card-title fw-bold">🗽 VIP Bronce</h5>
                         <p class="card-text fs-4 fw-bold text-warning">$5.000 CLP / mes</p>
@@ -82,8 +83,8 @@
                 </div>
             </div>
             <div class="col">
-                <div class="card h-100 bg-dark-secondary border-warning">
-                    <img src="assets/img/flny-vip-plata.png" class="card-img-top" alt="VIP Plata" />
+                <div class="card h-100 bg-dark-secondary border-warning" data-aos="zoom-in" data-aos-delay="200">
+                    <img src="assets/img/flny-vip-plata.png" class="card-img-top" alt="VIP Plata" loading="lazy"/>
                     <div class="card-body d-flex flex-column text-white">
                         <h5 class="card-title fw-bold">🗽 VIP Plata</h5>
                         <p class="card-text fs-4 fw-bold text-warning">$10.000 CLP / mes</p>
@@ -98,7 +99,7 @@
                 </div>
             </div>
             <div class="col">
-                <div class="card h-100 bg-dark-secondary border-warning">
+                <div class="card h-100 bg-dark-secondary border-warning" data-aos="zoom-in" data-aos-delay="400">
                     <img src="assets/img/flny-vip-oro.png" class="card-img-top" alt="VIP Oro" />
                     <div class="card-body d-flex flex-column text-white">
                         <h5 class="card-title fw-bold">🗽 VIP Oro</h5>
@@ -114,8 +115,8 @@
                 </div>
             </div>
             <div class="col">
-                <div class="card h-100 bg-dark-secondary border-warning">
-                    <img src="assets/img/flny-vip-diamante.png" class="card-img-top" alt="VIP Diamante" />
+                <div class="card h-100 bg-dark-secondary border-warning" data-aos="zoom-in" data-aos-delay="600">
+                    <img src="assets/img/flny-vip-diamante.png" class="card-img-top" alt="VIP Diamante" loading="lazy"/>
                     <div class="card-body d-flex flex-column text-white">
                         <h5 class="card-title fw-bold">🗽 VIP Diamante</h5>
                         <p class="card-text fs-4 fw-bold text-warning">$20.000 CLP / mes</p>
@@ -130,8 +131,8 @@
                 </div>
             </div>
             <div class="col">
-                <div class="card h-100 bg-dark-secondary border-warning">
-                    <img src="assets/img/flny-vip-esmeralda.png" class="card-img-top" alt="VIP Esmeralda" />
+                <div class="card h-100 bg-dark-secondary border-warning" data-aos="zoom-in" data-aos-delay="800">
+                    <img src="assets/img/flny-vip-esmeralda.png" class="card-img-top" alt="VIP Esmeralda" loading="lazy"/>
                     <div class="card-body d-flex flex-column text-white">
                         <h5 class="card-title fw-bold">🗽 VIP Esmeralda</h5>
                         <p class="card-text fs-4 fw-bold text-warning">$25.000 CLP / mes</p>
@@ -146,8 +147,8 @@
                 </div>
             </div>
             <div class="col">
-                <div class="card h-100 bg-dark-secondary border-warning">
-                    <img src="assets/img/flny-vip-platino.png" class="card-img-top" alt="VIP Platino" />
+                <div class="card h-100 bg-dark-secondary border-warning" data-aos="zoom-in" data-aos-delay="1000">
+                    <img src="assets/img/flny-vip-platino.png" class="card-img-top" alt="VIP Platino" loading="lazy"/>
                     <div class="card-body d-flex flex-column text-white">
                         <h5 class="card-title fw-bold">🗽 VIP Platino</h5>
                         <p class="card-text fs-4 fw-bold text-warning">$30.000 CLP / mes</p>
@@ -162,8 +163,8 @@
                 </div>
             </div>
             <div class="col">
-                <div class="card h-100 bg-dark-secondary border-warning">
-                    <img src="assets/img/flny-vip-flny.png" class="card-img-top" alt="VIP FLNY" />
+                <div class="card h-100 bg-dark-secondary border-warning" data-aos="zoom-in" data-aos-delay="1200">
+                    <img src="assets/img/flny-vip-flny.png" class="card-img-top" alt="VIP FLNY" loading="lazy"/>
                     <div class="card-body d-flex flex-column text-white">
                         <h5 class="card-title fw-bold">🗽 VIP FLNY</h5>
                         <p class="card-text fs-4 fw-bold text-warning">$35.000 CLP / mes</p>
@@ -189,7 +190,7 @@
                 </div>
                 <div class="modal-body">
                     <div class="row">
-                        <div class="col-md-5"><img id="vipModalImage" src="" class="img-fluid rounded" alt="Imagen del VIP" /></div>
+                        <div class="col-md-5"><img id="vipModalImage" src="" class="img-fluid rounded" alt="Imagen del VIP" loading="lazy"/></div>
                         <div class="col-md-7 d-flex flex-column">
                             <h3 id="vipModalName" class="fw-bold">Nombre del VIP</h3>
                             <p id="vipModalPrice" class="fs-4 text-warning fw-bold">Precio</p>
@@ -211,49 +212,77 @@
         </div>
     </div>
 
-    <div id="carouselExampleDark" class="carousel carousel-dark slide">
-        <div class="carousel-indicators">
-            <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-            <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2"></button>
-            <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2" aria-label="Slide 3"></button>
+    <section class="py-5" data-aos="fade-up" data-aos="zoom-in" data-aos-delay="1800">
+        <div class="container">
+            <div class="text-center mb-5">
+                <h2 class="display-5 fw-bold gradient-text">Galeria de la ciudad</h2>
+                <p class="lead text-muted">Un vistazo a nuestras mejores fotos del servidor.</p>
+            </div>
+            <div class="row">
+                <div class="col-lg-4 col-md-6 mb-4" data-aos="zoom-in">
+                    <a href="#" data-bs-toggle="modal" data-bs-target="#proyectoModal1" class="gallery-item">
+                        <div class="card border-0 shadow-sm h-100">
+                            <img src="assets/img/test.jpg" class="card-img-top" alt="Proyecto Isidora Goyenechea" loading="lazy">
+                            <div class="card-body"><h5 class="card-title">Toyota GT-86</h5><p class="card-text">Un adelanto de lo que se viene.</p></div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-lg-4 col-md-6 mb-4" data-aos="zoom-in" data-aos-delay="100">
+                    <a href="#" data-bs-toggle="modal" data-bs-target="#proyectoModal2" class="gallery-item">
+                        <div class="card border-0 shadow-sm h-100">
+                            <img src="assets/img/test2.webp" class="card-img-top" alt="Proyecto 2" loading="lazy">
+                            <div class="card-body"><h5 class="card-title">Residencia Privada Lo Barnechea</h5><p class="card-text">Construcción desde cimientos de vivienda familiar.</p></div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-lg-4 col-md-6 mb-4" data-aos="zoom-in" data-aos-delay="200">
+                    <a href="#" data-bs-toggle="modal" data-bs-target="#proyectoModal3" class="gallery-item">
+                        <div class="card border-0 shadow-sm h-100">
+                            <img src="assets/img/test3.webp" class="card-img-top" alt="Proyecto 3" loading="lazy">
+                            <div class="card-body"><h5 class="card-title">Fachada Edificio Vitacura</h5><p class="card-text">Restauración y modernización de fachada exterior.</p></div>
+                        </div>
+                    </a>
+                </div>
+            </div>
         </div>
-        <div class="carousel-inner">
-            <div class="carousel-item active" data-bs-interval="1000">
-            <img src="assets/img/test.jpg" class="d-block w-100" alt="...">
-            <div class="carousel-caption d-none d-md-block">
-                <h5>Toyota A-86</h5>
-                <p>La nave de la ciudad</p>
-            </div>
-            </div>
-            <div class="carousel-item" data-bs-interval="2000">
-            <img src="assets/img/test2.webp" class="d-block w-100" alt="...">
-            <div class="carousel-caption d-none d-md-block">
-                <h5>Nissan Skyline R34</h5>
-                <p>Algo exótico.</p>
-            </div>
-            </div>
-            <div class="carousel-item">
-            <img src="assets/img/test3.webp" class="d-block w-100" alt="...">
-            <div class="carousel-caption d-none d-md-block">
-                <h5>Toyota GT-86</h5>
-                <p>Algo exclusivo...</p>
-            </div>
+    </section>
+
+    <div class="modal fade" id="proyectoModal1" tabindex="-1" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered modal-lg">
+            <div class="modal-content bg-dark">
+                <div class="modal-header border-secondary">
+                    <h5 class="modal-title">Toyota GT-86</h5>
+                    <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <div id="carouselProyecto1" class="carousel slide">
+                        <div class="carousel-indicators">
+                            <button type="button" data-bs-target="#carouselProyecto1" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Foto 1"></button>
+                            </div>
+                        <div class="carousel-inner">
+                            <div class="carousel-item active">
+                                <img src="assets/img/test.jpg" class="d-block w-100" alt="Foto 1 del proyecto">
+                            </div>
+                        </div>
+                        <button class="carousel-control-prev" type="button" data-bs-target="#carouselProyecto1" data-bs-slide="prev">
+                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Anterior</span>
+                        </button>
+                        <button class="carousel-control-next" type="button" data-bs-target="#carouselProyecto1" data-bs-slide="next">
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Siguiente</span>
+                        </button>
+                    </div>
+                    <p class="mt-3">La nave de la ciudad</p>
+                </div>
             </div>
         </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
-        </button>
     </div>
     
     <div class="container">
         <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top border-secondary">
             <p class="col-md-4 mb-0 text-muted-dark">© 2025 Flaites NY Roleplay</p>
-            <a href="index.html" class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto text-decoration-none"><img src="assets/img/logo_tienda.png" alt="Logo Flaites NY" width="50" /></a>
+            <a href="index.html" class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto text-decoration-none"><img src="assets/img/logo_tienda.png" alt="Logo Flaites NY" width="50" loading="lazy"/></a>
             <ul class="nav col-md-4 justify-content-end">
                 <li class="nav-item"><a href="https://valparaiso-roleplay-mta.gitbook.io/westcoast-rp-fivem/normativas/donaciones" class="nav-link px-2 footer-link-simple">Términos</a></li>
                 <li class="nav-item"><a href="https://discord.com/invite/T99hAzmP5A" target="_blank" class="nav-link px-2 footer-link-simple" title="Discord"><i class="fab fa-discord fa-lg"></i></a></li>
@@ -264,6 +293,7 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="assets/js/cart.js"></script>
     <script src="assets/js/notifications.js"></script>
     <script src="assets/js/auth.js"></script>
@@ -307,6 +337,7 @@
                 vipModal.show();
             }
         }
+        AOS.init({ duration: 1000, once: true });
     </script>
 </body>
 </html>
