--- a/admin-dashboard.html
+++ b/admin-dashboard.html
@@ -163,7 +163,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="assets/js/notifications.js"></script>
-    <script src="assets.js/auth.js"></script>
+    <script src="assets/js/auth.js"></script>
     <script src="assets/js/admin.js"></script>
 </body>
 </html>
