--- a/catalogo.html
+++ b/catalogo.html
@@ -30,6 +30,15 @@
                 </ul>
                 <div class="d-flex align-items-center">
                     <div id="guest-container"><a href="login.html" class="btn btn-outline-warning btn-sm">Iniciar Sesión</a></div>
+                    <div id="notification-bell-container" class="dropdown" style="display: none;">
+                        <a href="#" class="nav-link position-relative me-2" role="button" data-bs-toggle="dropdown" aria-expanded="false" title="Notificaciones" onclick="markNotificationsAsRead()">
+                            <i class="fas fa-bell"></i>
+                            <span id="notification-dot" class="position-absolute top-0 start-100 translate-middle p-1 bg-danger border border-light rounded-circle" style="display: none;"></span>
+                        </a>
+                        <ul id="notifications-list" class="dropdown-menu dropdown-menu-dark dropdown-menu-end" style="width: 300px;">
+                            <li><p class="dropdown-item text-muted text-center">No hay notificaciones</p></li>
+                        </ul>
+                    </div>
                     <div id="user-container" class="dropdown" style="display: none;">
                         <a href="#" class="nav-link dropdown-toggle d-flex align-items-center" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                             <i class="fas fa-user-circle me-2"></i> Hola, <span id="username-span" class="fw-bold ms-1"></span>
@@ -40,10 +49,7 @@
                             <li><button class="dropdown-item text-danger" onclick="handleLogout()"><i class="fas fa-sign-out-alt me-2"></i>Cerrar Sesión</button></li>
                         </ul>
                     </div>
-                    <a href="carro.html" class="position-relative ms-3" title="Ver carro">
-                        <img src="assets/img/carrito-de-compras.png" alt="carro" style="height:24px;">
-                        <span id="cart-counter" class="cart-counter-badge">0</span>
-                    </a>
+                    <a href="carro.html" class="position-relative ms-3" title="Ver carro"><img src="assets/img/carrito-de-compras.png" alt="carro" style="height:24px;"><span id="cart-counter" class="cart-counter-badge">0</span></a>
                 </div>
             </div>
         </div>
@@ -68,7 +74,7 @@
                             <li>✅ Salario aumentado en un 10%.</li>
                             <li>✅ Kit de bienvenida mensual.</li>
                         </ul>
-                        <button class="btn btn-outline-warning fw-bold mt-auto" onclick="showVipDetails('vip_bronze', 'VIP Bronce', 5000, 'assets/img/flny-vip-bronce.png', 'Obtén beneficios iniciales como fila de prioridad...')">Ver Detalles</button>
+                        <button class="btn btn-outline-warning fw-bold mt-auto" onclick="showVipDetails('vip_bronze', 'VIP Bronce', 5000, 'assets/img/flny-vip-bronce.png', 'Obtén beneficios iniciales...')">Ver Detalles</button>
                     </div>
                 </div>
             </div>
@@ -84,7 +90,7 @@
                             <li>✅ Customización de personaje avanzada.</li>
                             <li>✅ Acceso a canal de Discord para VIPs.</li>
                         </ul>
-                        <button class="btn btn-outline-primary fw-bold mt-auto" onclick="showVipDetails('vip_silver', 'VIP Plata', 10000, 'assets/img/flny-vip-plata.png', 'Incluye todos los beneficios de Bronce, además...')">Ver Detalles</button>
+                        <button class="btn btn-outline-primary fw-bold mt-auto" onclick="showVipDetails('vip_silver', 'VIP Plata', 10000, 'assets/img/flny-vip-plata.png', 'Incluye todos los beneficios de Bronce...')">Ver Detalles</button>
                     </div>
                 </div>
             </div>
@@ -100,11 +106,11 @@
                             <li>✅ Posibilidad de crear tu propia banda.</li>
                             <li>✅ Soporte prioritario en Discord.</li>
                         </ul>
-                        <button class="btn btn-outline-warning fw-bold mt-auto" onclick="showVipDetails('vip_gold', 'VIP Oro', 15000, 'assets/img/flny-vip-oro.png', 'El paquete definitivo. Obtén todos los beneficios...')">Ver Detalles</button>
+                        <button class="btn btn-outline-warning fw-bold mt-auto" onclick="showVipDetails('vip_gold', 'VIP Oro', 15000, 'assets/img/flny-vip-oro.png', 'El paquete definitivo...')">Ver Detalles</button>
                     </div>
                 </div>
             </div>
-             </div>
+        </div>
     </main>
 
     <div class="modal fade" id="vipModal" tabindex="-1" aria-hidden="true">
@@ -118,17 +124,15 @@
                     <div class="row">
                         <div class="col-md-5"><img id="vipModalImage" src="" class="img-fluid rounded" alt="Imagen VIP" /></div>
                         <div class="col-md-7 d-flex flex-column">
-                            <h3 id="vipModalName" class="fw-bold"></h3>
-                            <p id="vipModalPrice" class="fs-4 text-warning fw-bold"></p>
-                            <p id="vipModalDescription" class="text-muted flex-grow-1"></p>
-                            <hr class="border-secondary" />
+                            <h3 id="vipModalName" class="fw-bold"></h3><p id="vipModalPrice" class="fs-4 text-warning fw-bold"></p>
+                            <p id="vipModalDescription" class="text-muted flex-grow-1"></p><hr class="border-secondary" />
                             <div class="d-flex align-items-center"><label class="form-label me-3 mb-0">Cantidad:</label><input type="number" class="form-control bg-dark text-white border-secondary" id="vipModalQuantity" value="1" min="1" max="10" style="width: 80px" /></div>
                         </div>
                     </div>
                 </div>
                 <div class="modal-footer border-secondary">
                     <div id="recipient-input-group" class="me-auto d-none" style="position: relative;">
-                        <input type="text" id="recipient-username" class="form-control bg-dark text-white border-secondary" placeholder="Discord de tu amigo" autocomplete="off">
+                        <input type="text" id="recipient-username" class="form-control bg-dark text-white border-secondary" placeholder="Escribe el nombre de un amigo..." autocomplete="off">
                         <div id="recipient-results-list" class="list-group position-absolute w-100" style="z-index: 1056;"></div>
                     </div>
                     <button type="button" class="btn btn-secondary" onclick="resetModalButtons()">Cerrar</button>
@@ -140,7 +144,7 @@
     </div>
     
     <div class="container">
-        <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top border-secondary">
+       <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top border-secondary">
            <p class="col-md-4 mb-0 text-muted-dark">© 2025 Flaites NY Roleplay</p>
            <a href="index.html" class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto text-decoration-none"><img src="assets/img/logo_tienda.png" alt="Logo Flaites NY" width="50" /></a>
            <ul class="nav col-md-4 justify-content-end">
@@ -155,7 +159,7 @@
     <script src="assets/js/cart.js"></script>
     <script src="assets/js/notifications.js"></script>
     <script src="assets/js/auth.js"></script>
-    <script>
+<script>
         AOS.init({
             duration: 800, // Duración de la animación en milisegundos
             once: true,    // La animación solo ocurre una vez
